adjust(index):banner

--- a/language/index_cn.json
+++ b/language/index_cn.json
@@ -12,7 +12,8 @@
             "满怀理想",
             "崇尚创新",
             "追求极致",
-            "奋发拼搏"
+            "奋发拼搏",
+            "vertical-lr"
         ],
         "每一件与众不同的产品，每一个激动人心的时刻,都是以无比的勤奋为前提，以消费者的真实感受为依托",
         "汇聚天然营养，优选核心科技,共享品质生活"
