--- a/language/index_en.json
+++ b/language/index_en.json
@@ -12,7 +12,8 @@
             "Full of ideals",
             "advocating innovation",
             "pursuing the ultimate",
-            "hard work"
+            "hard work",
+            "unset"
         ],
         "Every unique product, every exciting moment,all are based on extremely hard work and rely on the true feelings of consumers",
         "Gather natural nutrition and optimize core technology,sharing quality life"
