finish(product):cn & en

--- a/language/products_suger_cn.json
+++ b/language/products_suger_cn.json
@@ -1,6 +1,6 @@
 {
     "banner": {
-        "title": "番茄红素",
+        "title": "姜黄素爆汁软糖",
         "vender": "普特健康"
     },
     "chapter": "产品简介：",
