fix(product):adjust

--- a/language/products_tomato_cn.json
+++ b/language/products_tomato_cn.json
@@ -14,19 +14,17 @@
         "姜黄 （turmeric）是天然超级植物，姜黄素（curcuminoids）是姜黄中的活性植物化合物，占姜黄总量的2-6％。Curcumin是主要的姜黄素，已被确定为其最重要的活性成分，这也是姜黄呈现出黄色的原因。",
         "医学研究表明姜黄素具有 降血脂、降胆固醇、抗肿瘤、抗炎、利胆、 抗氧化、抗衰老消除自由基、 修复肺纤维化等作用，科学家新发现姜黄素有助治疗耐药结核病。"
     ],
-    "product-instructions-title": [
-        "配料：",
-        "食用方式及食用量：",
-        "适用于：",
-        "本产品不含有：",
-        "注意事项："
-    ],
     "product-instructions": [
+        "配料：",
         "请务必阅读标签",
         "麦芽糖浆、白砂糖、麦芽糖醇液、脱色脱酸浓缩苹果清汁、甘油、食用葡萄糖、芒果泥、果胶、胶原蛋白肠衣、黄原胶、刺槐豆胶、柠檬酸钠、柠檬酸、乳酸、DL-苹果酸、乳酸钠、姜黄、食用香料、植物油、巴西棕榈蜡",
+        "食用方式及食用量：",
         "每日建议量不应超过14粒软糖。",
+        "适用于：",
         "素食主义者。",
+        "本产品不含有：",
         "不含人造色素，调味剂或甜味剂。没有淀粉，没有玉米，没有牛奶，没有乳糖，没有大豆，没有麸质，没有小麦，没有酵母，没有猪产品。",
+        "注意事项：",
         "食品补充剂不能替代多样化，均衡的饮食和健康的生活方式。如果您正在怀孕，母乳喂养，服用任何药物或在医学监督下使用，请在使用前咨询医生或医疗保健专业人员。如果发生不良反应，请停止使用并咨询医生。请将本品放在儿童不能接触的地方。储存在阴凉，干燥的地方。如果盖下的密封件损坏或丢失，请不要使用。"
     ]
 }
