--- a/language/products_tomato_en.json
+++ b/language/products_tomato_en.json
@@ -14,19 +14,17 @@
         "Turmeric is a natural super botanical. Curcuminoids are the active plant compounds found in turmeric and make up 2-6% of it in total. Curcumin is the main curcuminoid and has been identified as its most important active ingredient. It’s also what makes turmeric yellow.",
         "Application: antioxidant, anti-inflammatory, support joints, muscles, liver, lung function."
     ],
-    "product-instructions-title": [
-        "Ingredients：",
-        "Way and amount of consumption：",
-        "Apply to：",
-        "Free From：",
-        "Advisory Information："
-    ],
     "product-instructions": [
+        "Ingredients：",
         "Always read the label",
         "Malt Syrup, Sugar, Maltitol Liquid, Concentrated Apple Juice, Glycerin, Edible Glucose, Mango Puree, Pectin, Collagen Casing, Xanthan Gum, LBG, Sodium Citrate, Citric Acid, Lactic Acid, DL-Malic Acid、Sodium Lactate, CAVACURMIN® Curcumin Complex, Flavor, Vegetable Oil, Carnauba Wax etc.",
+        "Way and amount of consumption：",
         "The recommended daily amount should not exceed 14 gummies.",
+        "Apply to：",
         "vegetarian.",
+        "Free From：",
         "No Artificial Colours, Flavours or Sweeteners. No Starch, No Corn, No Milk, No Lactose, No Soya, No Gluten, No Wheat, No Yeast, No Fish, No Porcine.",
+        "Advisory Information：",
         "Food supplements must not be used as a substitute for a varied and balanced diet and a healthy lifestyle. If you are pregnant, breastfeeding, taking any medications or under medical supervision, please consult a doctor or healthcare professional before use. Discontinue use and consult a doctor if adverse reactions occur. Keep out of reach of children. Store in a cool, dry place. Do not use if seal under cap is broken or missing."
     ]
 }
