--- a/language/products_fish_en.json
+++ b/language/products_fish_en.json
@@ -11,14 +11,14 @@
     ],
     "chapter-desc": [
         "This product is made of fish oil (PronovaPure high-content fish oil ) extracted from Norwegian marine fish as a raw material, and is refined by advanced technology. Bai Jia Kang Fish Oil Softgel contains essential Omega-3 polyunsaturated fatty acids EPA and DHA.",
-        "The essential fatty acids required by the human body cannot be synthesized by the human body, so they often obtained from food. EPA and DHA are essential Omega-3 fatty acids, usually found in fish oil. Bai Jia Kang Fish Oil Softgel contains pure fish oil, which can provide sufficient human essential fatty acids.",
+        "The essential fatty acids required by the human body cannot be synthesized by the human body, so they are often obtained from food. EPA and DHA are essential Omega-3 fatty acids, usually found in fish oil. Bai Jia Kang Fish Oil Softgel contains pure fish oil, which can provide sufficient human essential fatty acids.",
         "DHA supports the maintenance of vision and normal brain function. A daily intake of 250mg DHA can achieve beneficial effects. When 250mg of DHA is taken with 250mg EPA it also contributes to normal heart function."
     ],
     "product-instructions": [
         "Ingredients：",
         "Always read the label",
         "Fish Oil",
-        "Way and amount of consumption：",
+        "Direction",
         "Take 2 capsules daily, morning and evening on an empty stomach.",
         "Free From：",
         "No Artificial Colors, Flavors Or Sweeteners. No Preservatives. No Added Sugar Or Salt. No Starch, No Corn, No Milk, No Lactose, No Soy, No Gluten, No Wheat, No Yeast, No Porcine.",
