--- a/language/products_suger_en.json
+++ b/language/products_suger_en.json
@@ -10,7 +10,7 @@
         "Soft gummies"
     ],
     "chapter-desc": [
-        "The turmeric plant hails from South East Asia and has been used for thousands of years as a natural aid for digestion as well as a cooking spice. Like ginger, it is from the Zingiberaceae family, and its health benefits come from its roots.",
+        "The turmeric plant hails from South East Asia and has been used for thousands of years as a natural aid for digestion as well as a cooking spice. Like ginger, it is from the Zingiberaceae family and its health benefits come from its roots.",
         "Turmeric is a natural super botanical. Curcuminoids are the active plant compounds found in turmeric and make up 2-6% of it in total. Curcumin is the main curcuminoid and has been identified as its most important active ingredient. It’s also what makes turmeric yellow.",
         "Application: antioxidant, anti-inflammatory, support joints, muscles, liver, lung function."
     ],
@@ -18,10 +18,10 @@
         "Ingredients：",
         "Always read the label",
         "Malt Syrup, Sugar, Maltitol Liquid, Concentrated Apple Juice, Glycerin, Edible Glucose, Mango Puree, Pectin, Collagen Casing, Xanthan Gum, LBG, Sodium Citrate, Citric Acid, Lactic Acid, DL-Malic Acid、Sodium Lactate, CAVACURMIN® Curcumin Complex, Flavor, Vegetable Oil, Carnauba Wax etc.",
-        "Way and amount of consumption：",
+        "Direction",
         "The recommended daily amount should not exceed 14 gummies.",
         "Apply to：",
-        "vegetarian.",
+        "Vegetarian",
         "Free From：",
         "No Artificial Colours, Flavours or Sweeteners. No Starch, No Corn, No Milk, No Lactose, No Soya, No Gluten, No Wheat, No Yeast, No Fish, No Porcine.",
         "Advisory Information：",
